--- a/BayesBasics.bib
+++ b/BayesBasics.bib
@@ -174,3 +174,55 @@ engines that require efficient “turnkey” samplers.},
 	pages = {1595--1606},
 	file = {PubMed Central Full Text PDF:/Users/micl/Zotero/storage/8B4HTE4Z/Montesinos-López et al. - 2017 - A Bayesian Poisson-lognormal Model for Count Data .pdf:application/pdf}
 }
+
+@article{vehtari_practical_2017,
+	title = {Practical {Bayesian} model evaluation using leave-one-out cross-validation and {WAIC}},
+	volume = {27},
+	issn = {1573-1375},
+	url = {https://doi.org/10.1007/s11222-016-9696-4},
+	doi = {10.1007/s11222-016-9696-4},
+	abstract = {Leave-one-out cross-validation (LOO) and the widely applicable information criterion (WAIC) are methods for estimating pointwise out-of-sample prediction accuracy from a fitted Bayesian model using the log-likelihood evaluated at the posterior simulations of the parameter values. LOO and WAIC have various advantages over simpler estimates of predictive error such as AIC and DIC but are less used in practice because they involve additional computational steps. Here we lay out fast and stable computations for LOO and WAIC that can be performed using existing simulation draws. We introduce an efficient computation of LOO using Pareto-smoothed importance sampling (PSIS), a new procedure for regularizing importance weights. Although WAIC is asymptotically equal to LOO, we demonstrate that PSIS-LOO is more robust in the finite case with weak priors or influential observations. As a byproduct of our calculations, we also obtain approximate standard errors for estimated predictive errors and for comparison of predictive errors between two models. We implement the computations in an R package called loo and demonstrate using models fit with the Bayesian inference package Stan.},
+	language = {en},
+	number = {5},
+	urldate = {2018-11-13},
+	journal = {Statistics and Computing},
+	author = {Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+	month = sep,
+	year = {2017},
+	keywords = {Bayesian computation, K-fold cross-validation, Leave-one-out cross-validation (LOO), Pareto smoothed importance sampling (PSIS), Stan, Widely applicable information criterion (WAIC)},
+	pages = {1413--1432},
+	file = {Submitted Version:/Users/micl/Zotero/storage/9K6CVP7H/Vehtari et al. - 2017 - Practical Bayesian model evaluation using leave-on.pdf:application/pdf}
+}
+
+@article{vehtari_pareto_2017,
+	title = {Pareto {Smoothed} {Importance} {Sampling}},
+	url = {http://arxiv.org/abs/1507.02646},
+	abstract = {Importance weighting is a convenient general way to adjust for draws from the wrong distribution, but the resulting ratio estimate can be noisy when the importance weights have a heavy right tail, as routinely occurs when there are aspects of the target distribution not well captured by the approximating distribution. More stable estimates can be obtained by truncating the importance ratios. Here we present a new method for stabilizing importance weights using a generalized Pareto distribution fit to the upper tail of the distribution of the simulated importance ratios. The method includes stabilized effective sample estimates, Monte Carlo error estimates and convergence diagnostics.},
+	urldate = {2018-11-13},
+	journal = {arXiv:1507.02646 [stat]},
+	author = {Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+	month = jul,
+	year = {2015},
+	note = {arXiv: 1507.02646},
+	keywords = {Statistics - Computation, Statistics - Methodology},
+	file = {arXiv\:1507.02646 PDF:/Users/micl/Zotero/storage/VTRN43F7/Vehtari et al. - 2015 - Pareto Smoothed Importance Sampling.pdf:application/pdf;arXiv.org Snapshot:/Users/micl/Zotero/storage/Z34R4UUH/1507.html:text/html}
+}
+
+@article{yao_using_2018,
+	title = {Using {Stacking} to {Average} {Bayesian} {Predictive} {Distributions} (with {Discussion})},
+	volume = {13},
+	issn = {1936-0975, 1931-6690},
+	url = {https://projecteuclid.org/euclid.ba/1516093227},
+	doi = {10.1214/17-BA1091},
+	abstract = {Bayesian model averaging is flawed in the ℳM{\textless}math alttext="\${\textbackslash}mathcal\{M\}\$" overflow="scroll"{\textgreater}{\textless}mi mathvariant="script"{\textgreater}M{\textless}/mi{\textgreater}{\textless}/math{\textgreater}-open setting in which the true data-generating process is not one of the candidate models being fit. We take the idea of stacking from the point estimation literature and generalize to the combination of predictive distributions. We extend the utility function to any proper scoring rule and use Pareto smoothed importance sampling to efficiently compute the required leave-one-out posterior distributions. We compare stacking of predictive distributions to several alternatives: stacking of means, Bayesian model averaging (BMA), Pseudo-BMA, and a variant of Pseudo-BMA that is stabilized using the Bayesian bootstrap. Based on simulations and real-data applications, we recommend stacking of predictive distributions, with bootstrapped-Pseudo-BMA as an approximate alternative when computation cost is an issue.},
+	language = {EN},
+	number = {3},
+	urldate = {2018-11-13},
+	journal = {Bayesian Analysis},
+	author = {Yao, Yuling and Vehtari, Aki and Simpson, Daniel and Gelman, Andrew},
+	month = sep,
+	year = {2018},
+	keywords = {Bayesian model averaging, model combination, predictive distribution, proper scoring rule, stacking, Stan},
+	pages = {917--1007},
+	file = {Full Text PDF:/Users/micl/Zotero/storage/N874HK4T/Yao et al. - 2018 - Using Stacking to Average Bayesian Predictive Dist.pdf:application/pdf;Snapshot:/Users/micl/Zotero/storage/PIEGINY7/1516093227.html:text/html}
+}
