updates through brms

--- a/BayesBasics.bib
+++ b/BayesBasics.bib
@@ -226,3 +226,20 @@ engines that require efficient “turnkey” samplers.},
 	pages = {917--1007},
 	file = {Full Text PDF:/Users/micl/Zotero/storage/N874HK4T/Yao et al. - 2018 - Using Stacking to Average Bayesian Predictive Dist.pdf:application/pdf;Snapshot:/Users/micl/Zotero/storage/PIEGINY7/1516093227.html:text/html}
 }
+
+@book{mcelreath2016,
+  title={Statistical Rethinking: A Bayesian Course with Examples in R and Stan},
+  author={McElreath, Richard},
+  volume={122},
+  year={2016},
+  publisher={CRC Press}
+}
+
+
+@book{kruschke2014doing,
+  title={Doing Bayesian data analysis: A tutorial with R, JAGS, and Stan},
+  author={Kruschke, John},
+  year={2015},
+  edition={2nd},
+  publisher={Academic Press}
+}
