--- a/brms.Rmd
+++ b/brms.Rmd
@@ -1,6 +1,7 @@
 # (PART\*) Part III: brms {-}
 
-# Installation
+
+# Installing brms
 
 - <span class="pack">rstan</span> installation required
 - Installed as any other R package
@@ -8,9 +9,11 @@
 
 # Comparison to rstanarm
 
-<span class="pack">brms</span> offers more modeling capabilities, flexibility with priors, and more
+<span class="pack">brms</span> offers more modeling capabilities, flexibility with priors, and more[^tabledated]
 
 <img src="img/brms_vs_rstanarm.png" style="display:block; margin: 0 auto;" width=75%>
+
+[^tabledated]: This table is from the current vignette but dated. For example, <span class="pack">brms</span> does impute missing values in multiple ways even.
 
 # Models
 
@@ -36,8 +39,13 @@ The modeling syntax with brms mimics base R and some of the more popular package
 
 ## brms: Mixed Model
 
+We'll start with the mixed model from before
+
+Like <span class="pack">rstanarm</span>, <span class="pack">brms</span> follows <span class="pack">lme4</span>'s syntax
+
 ```{r brms_mixed}
-sleepstudy_brms <- brm(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy)
+sleepstudy_brms <- brm(Reaction ~ Days + (1 + Days|Subject), 
+                       data = sleepstudy)
 summary(sleepstudy_brms)
 ```
 
@@ -48,6 +56,8 @@ summary(sleepstudy_brms)
 
 
 ## brms: Mixed Model Extensions
+
+Just with mixed models, we already start to see what <span class="pack">brms</span> brings to the table
 
 - additional distributions: ordinal, zero-inflated, beta and many more
 - Correlated residuals, Additive mixed models, non-linear with known form, heterogenous variance components, correlated random effects across multivariate outcomes, and more
