--- a/rstanarm.Rmd
+++ b/rstanarm.Rmd
@@ -2,7 +2,7 @@
 
 
 
-# Getting started
+# Getting Started with rstanarm
 
 - <span class="pack">rstan</span> installation required.
 - Installed as any other R package
@@ -19,8 +19,8 @@ Target:
 Predictors:
 
 - Type of program in which the student is enrolled: 
-  General, Vocational, Academic
-- standardized test in math
+    - General, Vocational, Academic
+- Standardized test in math
 - Gender
 
 ## Traditional GLM
@@ -39,6 +39,7 @@ saveRDS(attendance, 'data/attendance.Rds')
 ```
 
 
+We'll use Poisson regression[^poisson] to model the count of the number of days absent
 
 
 ```{r basic_poisson, echo=-1, eval=-3}
@@ -57,6 +58,7 @@ tidy(attendance_glm) %>%
 
 ## rstanarm: GLM
 
+<span class="pack">rstanarm</span> uses the same nomenclature and general approach as base R
 
 ```{r bayesian_poisson0, echo=FALSE}
 attendance_bglm <- stan_glm(daysabs ~ math + gender + prog,
@@ -102,14 +104,20 @@ attendance_bglm <- stan_glm(daysabs ~ math + gender + prog,
 
 ## rstanarm: Mixed Model
 
+Let's look at a mixed model for another demonstration
+
 ```{r mixed, eval=TRUE}
 library(lme4)
-sleepstudy_lmer <- lmer(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy)
+sleepstudy_lmer <- lmer(Reaction ~ Days + (1 + Days|Subject), 
+                        data = sleepstudy)
 summary(sleepstudy_lmer)
 ```
 
-```{r bayesian_mixed, echo=-3}
-sleepstudy_blmer <- stan_lmer(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy)
+Again, <span class="pack">rstanarm</span> sticks with the same style
+
+```{r bayesian_mixed, echo=1:3}
+sleepstudy_blmer <- stan_lmer(Reaction ~ Days + (1 + Days|Subject), 
+                              data = sleepstudy)
 summary(sleepstudy_blmer)
 save(sleepstudy_lmer, sleepstudy_blmer, sleepstudy_brms, file = 'data/sleepstudy_bayes.RData')
 ```
@@ -118,6 +126,15 @@ save(sleepstudy_lmer, sleepstudy_blmer, sleepstudy_brms, file = 'data/sleepstudy
 load('data/sleepstudy_bayes.RData')
 print(sleepstudy_blmer, digits = 3)
 ```
+
+
+In the Bayesian model, the random effects are not BLUPS, but are parameters estimates in the model.
+
+```{r ranef_compare}
+data_frame(lme4 = ranef(sleepstudy_lmer)[[1]][['(Intercept)']],
+           bayesian = ranef(sleepstudy_blmer)[[1]][['(Intercept)']])
+```
+
 
 
 ## rstanarm: Other Models
@@ -147,9 +164,9 @@ For most models:
 - regression coefficients have mean zero with some specific variance
 - scale parameters (e.g. residual variance) will have appropriate priors
 
-Basically, <span class="pack">rstanarm</span> is going to be okay for you to use defaults 
+Basically, <span class="pack">rstanarm</span> is going to be okay for you to use defaults
 
-Resources about priors:
+If you want to change, there are plenty of resources about priors:
 
 `?prior_summary`
 
@@ -205,3 +222,5 @@ attendance_bglm <- stan_glm(daysabs ~ math + gender + prog,
 ```
 
 
+
+[^poisson]: If not familiar with Poisson regression, we are modeling the log counts as a function of the covariates.  Often the exponentiated coefficients are reported.  For example, `exp(coef(attendance_glm)['genderMale'])` is `r round(exp(coef(attendance_glm)['genderMale']),3)`. Subtracting 1 tells us there is a `r round(exp(coef(attendance_glm)['genderMale']) -1, 3)*100`% decrease in the incident rate of days absent as we switch from female to male.
