--- a/stan.Rmd
+++ b/stan.Rmd
@@ -14,7 +14,7 @@ Compared to others:
 
 - Fast convergence
 - No conjugacy required
-- warmup vs. burnin
+- warmup vs. burnin[^warmup]
 - less autocorrelation
 - faster for more complex models
 
@@ -46,7 +46,7 @@ model {                     // Model block
   
   // priors
   beta ~ normal(0, 10);
-  sigma ~ cauchy(0, 5);     // With sigma bounded at 0, this is half-cauchy
+  sigma ~ cauchy(0, 5);     
   
   // likelihood
   y ~ normal(mu, sigma);
@@ -68,7 +68,7 @@ Model can be:
 
 RStudio support for Stan (e.g. syntax highlighting)
 
-<span class="pack">rstan</span> runs the model, and provides a lot of other tools to assess.
+<span class="pack">rstan</span> runs the model, and provides a lot of other tools to assess
 
 ```{r rstan_example}
 results = stan(model_code = my_model, data = my_data_list)
@@ -87,7 +87,7 @@ Good for basic to intermediate, and even somewhat complex models
 Precompiled stan code
 
 - Standard models run very quickly
-- Without compilation will always be faster than brms for identical models
+- Without compilation will always be faster than <span class="pack">brms</span> for identical models
 
 
 ## brms
@@ -100,13 +100,14 @@ Good for basic to complex models
 
 Not pre-compiled
 
-- Some simpler models with less data would take longer for compilation than to actually run
+- Some simpler models with not much data would take longer for compilation than to actually run
 
 Extremely rapid feature integration
 
+
 ##  More Stan
 
-Many packages to explore the results of a Stan model from any of these packages.
+Many packages to explore the results of a Stan model 
 
 - shinystan
 - tidybayes 
@@ -129,7 +130,7 @@ get_depgraph = function(pack) {
 stan_depgraph = get_depgraph('rstan')
 ```
 
-```{r stan_graph, echo=F, eval=T, cache=FALSE}
+```{r stan_graph, echo=F, eval=T, cache=FALSE, out.width=600, out.height=1200}
 library(visNetwork)
 nodes = stan_depgraph$node_df %>% 
   rename(label=name) %>% 
@@ -156,3 +157,6 @@ visNetwork(nodes = nodes_trim,
            # length = c(200,10),
            physics = T)
 ```
+
+
+[^warmup]: @gelman_bayesian_2013 : In the simulation literature (including earlier editions of this book), the warm-up period is called burn-in, a term we now avoid because we feel it draws a misleading analogy to industrial processes in which products are stressed in order to reveal defects. We prefer the term ‘warm-up’ to describe the early phase of the simulations in which the sequences get closer to the mass of the distribution.  (see also, this discussion at [Gelman's blog](https://andrewgelman.com/2017/12/15/burn-vs-warm-iterative-simulation-algorithms/))
