--- a/conclusion.Rmd
+++ b/conclusion.Rmd
@@ -6,7 +6,11 @@ Implementing Bayesian methods has never been easier
 
 <span class="pack">rstanarm</span> and <span class="pack">brms</span> make allow one to worry about the concepts instead of syntax
 
-Bayesian analysis provides more ways to combat complex models, diagnosis issues, get creative with stats
+Bayesian analysis provides more ways to combat complex models, diagnosis issues, get creative with results
+
+Even standard/traditional/basic models become more fun!
+
+
 
 
 # Exercise
@@ -16,6 +20,7 @@ Whether a survey respondent agrees or disagrees with a conservative statement ab
 - 1974/1975 Survey
 - Women should take care of running their homes and leave running the country up to men
 - Modeled as a function of the gender and education of the respondents
+- Data from the <span class="pack">HSAUR3</span> package
 
 
 
